--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "alert": "^5.0.10",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.6",
     "ejs": "^2.7.4",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
-    "mongoose": "^6.2.2"
+    "mongoose": "^6.2.2",
+    "popups": "^1.1.3",
+    "req-flash": "0.0.3"
   }
 }
